[package]
name = "git-rare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.16", features = ["derive"] }
tabled = "0.15.0"
xshell = "0.2.5"
strum = "0.25"
strum_macros = "0.25"
rayon = "1.8.0"
